--- a/class/redis-operator.yml
+++ b/class/redis-operator.yml
@@ -1,5 +1,11 @@
 parameters:
   kapitan:
+    dependencies:
+      - type: helm
+        source: ${redis_operator:charts:operator:source}
+        chart_name: redis-operator
+        version: ${redis_operator:charts:operator:version}
+        output_path: ${_base_directory}/helmcharts/operator/${redis_operator:charts:operator:version}/
     compile:
       - input_paths:
           - ${_base_directory}/component/app.jsonnet
@@ -9,3 +15,19 @@ parameters:
           - ${_base_directory}/component/main.jsonnet
         input_type: jsonnet
         output_path: redis-operator/
+      # Helmchart
+      - input_paths:
+          - ${_base_directory}/helmcharts/operator/${redis_operator:charts:operator:version}
+        input_type: helm
+        output_path: redis-operator/10_helmchart
+        helm_values: ${redis_operator:helmValues}
+        helm_params:
+          name: redis-operator
+          namespace: ${redis_operator:namespace}
+          dependency_update: true
+  commodore:
+    postprocess:
+      filters:
+        - type: jsonnet
+          path: redis-operator/10_helmchart/redis-operator/crds
+          filter: postprocess/patch_crd.jsonnet
