--- a/tests/defaults.yml
+++ b/tests/defaults.yml
@@ -1,3 +1,12 @@
-# Overwrite parameters here
+applications:
+  - prometheus
 
-# parameters: {...}
+parameters:
+  kapitan:
+    dependencies:
+      - type: https
+        source: https://raw.githubusercontent.com/projectsyn/component-prometheus/master/lib/prometheus.libsonnet
+        output_path: vendor/lib/prometheus.libsonnet
+
+  prometheus:
+    defaultInstance: system
