--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,13 +17,13 @@ jobs:
           - lint_yaml
           - lint_adoc
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Run ${{ matrix.command }}
         run: make ${{ matrix.command }}
   editorconfig:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: snow-actions/eclint@v1.0.1
         with:
           args: 'check'
@@ -33,11 +33,12 @@ jobs:
       matrix:
         instance:
           - defaults
+          - create-db
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           path: ${{ env.COMPONENT_NAME }}
       - name: Compile component
@@ -48,11 +49,12 @@ jobs:
       matrix:
         instance:
           - defaults
+          - create-db
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           path: ${{ env.COMPONENT_NAME }}
       - name: Golden diff
